--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: rgb(255, 181, 181);
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+#first {
+    color: rgb(8, 8, 153);
+    font-size: 36px;
+}
