Add class .woah to fourth element to reduce code
To reduce duplicate code in stylesheet, since third and fourth element
share the same font size, I updated the fourth element to share the same
class with the third, then in style.css I altered the selector of the
third element to just call .woah , making the font-size apply to
both elements and allowing me to delete one declaration from the fourth
element (#second)

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -8,12 +8,11 @@
     font-size: 36px;
 }
 
-.odd.woah {
+.woah {
     font-size: 24px;
 }
 
 #second {
     background-color: rgb(134, 247, 134);
-    font-size: 24px;
     font-weight: 700;
 }
